# HPC-GPU

./: BreakEvenSync.txt  Makefile  MemoryMallocH2D.txt  MemoryMallocHostD2H.txt  MemoryMallocHostH2D.txt  NullKernelPlot.ipynb  SyncTime.txt  ex2.sh  ex2_out.txt
GPU/Sheet4/: global2sharedblocks.sh  shared2global.sh  shared2globalblocks.txt  shared2register.txt
GPU/Sheet5/: cpucomp.sh  matMulsize.sh  matMulth.sh
GPU/Sheet6/: S6Plots.ipynb  greduction.txt  out.txt  reduction.sh
GPU/Sheet6_Andreas/Programming/01_CPUVersion/: CMakeLists.txt  main.cpp  sbatch_cpu.sh
GPU/Sheet7/: Makefile  README  nBody.txt  nBody_opt.txt  nbodybench.sh  nbodyplot.ipynb  nbodyprof.sh  nbodysingle.sh  nbodythreads.sh  out.txt
HPC/: Ex2.2.sh  Exercise1DannyPingitzer.tex
HPC/Sheet2/: Ex2.1.c  Ex2.1.sh  Ex2.2.c  compile.sh
HPC/Sheet3/: Ex1.c  Ex1.sh  Ex1resonenode.txt  Ex1restwonodes.txt  Ex2.c  Ex2.sh  Ex2resblonenode.txt  Ex2resbltwonodes.txt  Ex2resnonblonenode.txt  Ex2resnonbltwonodes.txt  Sheet3Ex1Plots.ipynb  compile.sh  out.txt
HPC/Sheet5/: Makefile  relaxation.sh
HPC/Sheet6/: relaxation.sh  relaxationtest.sh  test.sh
Sheet2/Ex1/: BreakEven.sh  NullKernelPlot.ipynb  ex2_out.txt
Sheet3/Ex1/: Makefile  MemorySpeedD2D.sh  ex2_out.txt
Sheet4/: Sheet4Ex2_3Plots.ipynb  global2shared.sh  global2shared.txt  global2sharedblocks.txt  register2shared.sh  register2shared.txt  shared2global.txt  shared2globalblocks.sh  shared2register.sh  shared2register_conflict.sh  shared2register_conflict.txt
Sheet5/: S5Plots.ipynb  matMulsize.txt  matMulth.txt
src/: MemorySpeed.cu
(+57 files in other folders)
